# oil

./: .gitignore  Cargo.toml  README.md  localnet.sh
api/: Cargo.toml  README.md  idl.json
api/src/: consts.rs  error.rs  event.rs  fogo.rs  instruction.rs  lib.rs  sdk.rs  utils.rs
api/src/state/: auction.rs  automation.rs  bid.rs  board.rs  config.rs  micro.rs  miner.rs  mod.rs  pool.rs  referral.rs  rig.rs  round.rs  seeker.rs  share.rs  stake.rs  treasury.rs  well.rs  whitelist.rs
cli/: Cargo.toml
cli/src/: main.rs
program/: Cargo.toml
program/src/: automate.rs  automate_with_session.rs  barrel.rs  buyback.rs  checkpoint.rs  checkpoint_auction.rs  checkpoint_auction_with_session.rs  checkpoint_with_session.rs  claim_auction_oil.rs  claim_auction_oil_with_session.rs  claim_auction_sol.rs  claim_auction_sol_with_session.rs  claim_oil.rs  claim_oil_with_session.rs  claim_referral.rs  claim_referral_with_session.rs  claim_seeker.rs  claim_sol.rs  claim_sol_with_session.rs  claim_yield.rs  claim_yield_with_session.rs  close.rs  contribute.rs  contribute_with_session.rs  create_referral.rs  create_referral_with_session.rs  create_whitelist.rs  deploy.rs  deploy_with_session.rs  deposit.rs  deposit_with_session.rs  initialize.rs  lib.rs  liq.rs  log.rs  migrate.rs  new_var.rs  place_bid.rs  place_bid_with_session.rs  reload_sol.rs  (+11 more)
scripts-idl/: Cargo.toml  README.md
scripts-idl/src/: main.rs
