[package]
name = "scripts-idl"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate-idl"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
regex = "1.10"
walkdir = "2.4"
indexmap = { version = "2.0", features = ["serde"] }